fix wrong color

--- a/src/components/author-sidebar/author-sidebar.module.css
+++ b/src/components/author-sidebar/author-sidebar.module.css
@@ -106,7 +106,7 @@
 }
 
 .editButton a {
-  color: var(--text-primary);
+  color: var(--link-primary);
   cursor: pointer;
 }
 
